--- a/info.plist
+++ b/info.plist
@@ -23,7 +23,7 @@
           <key>kind</key>
           <string>software</string>
           <key>title</key>
-          <string><![CDATA[é™é™è¡¨ç›˜]]></string>
+          <string><![CDATA[THEANH BUI]]></string>
         </dict>
       </dict>
     </array>
