--- a/info.plist
+++ b/info.plist
@@ -23,7 +23,7 @@
           <key>kind</key>
           <string>software</string>
           <key>title</key>
-          <string><![CDATA[JW PRO by THEANH]]></string>
+          <string><![CDATA[Jingwatch Pro - THEANH]]></string>
         </dict>
       </dict>
     </array>
