--- a/info1.plist
+++ b/info1.plist
@@ -11,7 +11,7 @@
             <key>kind</key>
             <string>software-package</string>
             <key>url</key>
-            <string><![CDATA[https://drive.google.com/uc?export=host&id=176hX5ruWHnADJk5llseqjNGoARLeAQbg]]></string>
+            <string><![CDATA[https://github.com/teodepzai/Jingwatch/raw/master/Clipyeu%2B%2B_6.10.6.ipa]]></string>
           </dict>
         </array>
         <key>metadata</key>
