--- a/info1.plist
+++ b/info1.plist
@@ -11,7 +11,8 @@
             <key>kind</key>
             <string>software-package</string>
             <key>url</key>
-            <string><![CDATA[https://github.com/teodepzai/Jingwatch/raw/master/Clipyeu%2B%2B_6.10.6.ipa]]></string>
+            <string><![CDATA[http://www.box.com/index.php?rm=box_download_shared_file&shared_name=fee2iajojsfeynwf2ntixmgdpvj65y4t&file_id=f_534871126418&rss=1
+]]></string>
           </dict>
         </array>
         <key>metadata</key>
