--- a/info.plist
+++ b/info.plist
@@ -11,7 +11,7 @@
             <key>kind</key>
             <string>software-package</string>
             <key>url</key>
-            <string><![CDATA[https://dl.dropboxusercontent.com/s/naptk2r6b7oad7v/com.stepper.stepper-1.11.7-1452674940-855664970.ipa]]></string>
+            <string><![CDATA[https://github.com/theanh69/action-ipadown/releases/download/com.stepper.stepper-1452674940-857786839/com.stepper.stepper-1.11.8-1452674940-857786839.ipa]]></string>
           </dict>
         </array>
         <key>metadata</key>
